# rules_ansible

./: MODULE.bazel  README.md  requirements_lock.txt
ansible/: BUILD.bazel  defs.bzl
ansible/private/: collections.bzl  playbook.bzl
examples/basic/: BUILD.bazel  README.md  inventory.yaml  my_playbook.yaml
examples/collections/: BUILD.bazel  README.md  collections.MODULE.bazel  my_playbook.yaml
