module(name = "rules_ansible", version = "0.0.0")

bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_python", version = "1.8.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.13")
python.toolchain(python_version = "3.13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi_ansible",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi_ansible")

include("//examples/collections:collections.MODULE.bazel")
