load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//visibility:public"])

py_console_script_binary(
    name = "ansible",
    pkg = "@pypi_ansible//ansible_core",
    script = "ansible",
)

py_console_script_binary(
    name = "ansible-playbook",
    pkg = "@pypi_ansible//ansible_core",
    script = "ansible-playbook",
)

py_console_script_binary(
    name = "ansible-inventory",
    pkg = "@pypi_ansible//ansible_core",
    script = "ansible-inventory",
)

py_console_script_binary(
    name = "ansible-doc",
    pkg = "@pypi_ansible//ansible_core",
    script = "ansible-doc",
)

py_console_script_binary(
    name = "ansible-galaxy",
    pkg = "@pypi_ansible//ansible_core",
    script = "ansible-galaxy",
)
